<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_demo">Accel World</string>
    <string name="start_name">Start</string>
    <string name="numpad_query">Enter 7586423109</string>
    <string name="control_method_name">Control Method</string>
    <string name="tilt_gain_name">Cursor Sensitivity</string>
    <string name="clicking_method_name">Clicking Method</string>
    <string name="task_name">Task</string>
    <string name="backtap_hint"><i><b>*PLEASE ENSURE B-Tap Service IS RUNNING*</b></i></string>
    <string name="next_prompt">Finished!\n Press to go to the next activity.</string>
</resources>
